<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_bookmarks"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/Cd_Bookmarks"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/Cd_Settings"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:title="@string/TopAppBar_About"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help"
        android:title="@string/TopAppBar_Help"
        app:showAsAction="never" />
</menu>
